lang/macro/tests/ui/fail/C-00-constructor-self-ref.stderr
error: #[ink(constructor)] functions must not have any kind of `self` receiver
  --> $DIR/C-00-constructor-self-ref.rs:10:29
   |
10 |         fn invalid_self_ref(&self) -> Self {
   |                             ^^^^^
